--- a/style.css
+++ b/style.css
@@ -54,11 +54,11 @@ body{font-family: "Poppins", sans-serif !important;}
 .main-benner-section .list-div{display: flex;flex-direction: column;gap: 10px 0;}
 .main-benner-section .list-div .list-text{display: flex;gap: 0 8px;font-size: 16px;line-height: 26px;color: #000;}
 .main-benner-section .list-div .list-text .icon{padding-top: 5px;color: var(--primary-color);}
-.main-benner-section .carousel-control-prev, .main-benner-section .carousel-control-next{height: 50px;width: 50px;background: var(--dark-secondary-color);opacity: 1;transition: all 0.3s ease-in-out;top: 50%;transform: translate(0,-50%);}
-.main-benner-section .carousel-control-prev{left: -5.5%;}
-.main-benner-section .carousel-control-next{right: -5.5%;}
-.main-benner-section .carousel-control-prev:hover, .main-benner-section .carousel-control-next:hover{background: var(--primary-color);}
-.main-benner-section .carousel-control-next-icon,.main-benner-section .carousel-control-prev-icon{width: 24px;height: 24px;}
+.carousel-control-prev, .carousel-control-next{height: 50px;width: 50px;background: var(--dark-secondary-color);opacity: 1;transition: all 0.3s ease-in-out;top: 50%;transform: translate(0,-50%);}
+.carousel-control-prev{left: -5.5%;}
+.carousel-control-next{right: -5.5%;}
+.carousel-control-prev:hover, .carousel-control-next:hover{background: var(--primary-color);}
+.carousel-control-next-icon, .carousel-control-prev-icon{width: 24px;height: 24px;}
 .main-benner-section .right-col{justify-content: center;}
 .main-benner-section .video-tag{width: 425px;height: auto;max-height: 300px;}
 .main-benner-section .carousel-inner{display: flex;align-items: center;}
@@ -167,10 +167,11 @@ body{font-family: "Poppins", sans-serif !important;}
 .introduction-div{padding: 35px 0;border-bottom: 1px solid #eee;}
 .introduction-div .introduction-text{font-size: 18px;line-height: 28px;color: #000;text-align: center;margin: 0;font-weight: 500;}
 
+.flipbooks-cards-row{gap: 30px 0;}
 .featured-categories .tag-content{display: flex;align-items: center;gap: 15px;flex-wrap: wrap;justify-content: center;}
 .featured-categories .tag-content .tag{display: flex;border: 0;padding: 16px 20px;border-radius: 7px;color: #212529;background-color: #eee;align-items: center;margin-bottom: 0;font-weight: 500;font-size: 16px;line-height: 24px;gap: 0 15px;}
 .featured-categories .tag-content .tag .icon{color: var(--primary-color);font-size: 22px;}
-
+.popular-flipbooks-sec{padding-top: 0;}
 .flipbooks-cards{padding: 30px 0;height: 100%;}
 .flipbooks-cards .carousel-col{padding: 0 15px;}
 .flipbooks-cards .flipbooks-card{display: flex;flex-direction: column;box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.1);height: 100%;border-radius:6px;}
@@ -183,6 +184,7 @@ body{font-family: "Poppins", sans-serif !important;}
 .flipbooks-card .inner-text-content .star-div{display: flex;gap: 0 3px;align-items: center;}
 .flipbooks-card .inner-text-content .star-div .star-icon{font-size: 18px;color: var(--dark-secondary-color);}
 .flipbooks-card .inner-text-content .star-div .star-icon.rated{color: yellowgreen;}
+.price-star-div{display: flex;align-items: center;justify-content: space-between;gap: 0 30px;margin-top: auto;}
 
 
 @media (max-width: 767px) {
