--- a/style.css
+++ b/style.css
@@ -180,13 +180,22 @@ body{font-family: "Poppins", sans-serif !important;}
 .flipbooks-cards .flipbooks-card .img-div .img{height: 250px;display: flex;align-items: center;justify-content: center;background: #999999;border-radius: 6px 6px 0 0;font-size: 42px;color: var(--dark-secondary-color);}
 .flipbooks-cards .flipbooks-card .inner-text-content{padding: 14px;border-radius: 0 0 6px 6px;display: flex;flex-direction: column;gap: 12px 0;height: 100%;}
 .flipbooks-card .inner-text-content .author-screen-name{width: fit-content;margin: 0;background: #eee;padding: 8px 16px;border-radius: 30px;font-size: 14px;font-weight: 500;color: var(--primary-color);}
-.flipbooks-card .inner-text-content .title{font-size: 18px;line-height: 26px;color: #000;font-weight: 600;margin: 0;}
+.flipbooks-card .inner-text-content .title{font-size: 18px;line-height: 26px;color: #000;font-weight: 600;margin: 0;transition: all 0.2s ease-in-out;text-decoration: none;}
+.flipbooks-card .inner-text-content .title:hover{color: var(--primary-color);}
 .flipbooks-card .inner-text-content .desc{font-size: 16px;line-height: 24px;color: #000;margin: 0;}
 .flipbooks-card .inner-text-content .price{font-size: 28px;line-height: normal;font-weight: 600;color: var(--primary-color);margin: 0;margin-top: auto;}
 .flipbooks-card .inner-text-content .star-div{display: flex;gap: 0 3px;align-items: center;}
 .flipbooks-card .inner-text-content .star-div .star-icon{font-size: 18px;color: var(--dark-secondary-color);}
 .flipbooks-card .inner-text-content .star-div .star-icon.rated{color: yellowgreen;}
+.rated{color: yellowgreen;}
 .price-star-div{display: flex;align-items: center;justify-content: space-between;gap: 0 30px;margin-top: auto;}
+
+.filter-div{padding: 14px;border: 2px solid #DDDDDD;border-radius: 6px;display: flex;flex-direction: column;gap: 20px 0;position: sticky;top: 10px;}
+.filter-div .reset-btn{text-decoration: none;width: 100%;text-align: right;font-size: 16px;margin-bottom: 0;position: absolute;right: 10px;top: 10px;}
+.img-div.carousel .carousel-inner .carousel-item{height: auto !important;}
+.flipbooks-cards{gap: 30px 0;position: relative;}
+.filter-div .form-group .form-label{font-weight: 600;text-transform: uppercase;margin-bottom: 10px;}
+.filter-div .form-group .checkboxs{display: flex;flex-direction: column;gap: 7px 0;}
 
 
 @media (max-width: 767px) {
@@ -235,6 +244,18 @@ body{font-family: "Poppins", sans-serif !important;}
 
     .featured-categories .tag-content .tag{padding: 14px 18px;font-size: 14px;line-height: 22px;}
     .featured-categories .tag-content .tag .icon{font-size: 18px;}
+
+    .popular-flipbooks-sec .carousel-control-prev, .popular-flipbooks-sec .carousel-control-next{width: 35px;height: 35px;}
+    .popular-flipbooks-sec .carousel-control-next-icon, .popular-flipbooks-sec .carousel-control-prev-icon{width: 15px;height: 15px;}
+    .popular-flipbooks-sec .carousel-control-prev{left: 0;}
+    .popular-flipbooks-sec .carousel-control-next{right: 0;}
+    .flipbooks-card .inner-text-content .title{font-size: 16px;line-height: 24px;}
+    .flipbooks-card .inner-text-content .desc{font-size: 14px;line-height: 22px;}
+    .flipbooks-card .inner-text-content .star-div .star-icon{font-size: 15px;}
+    .flipbooks-card .inner-text-content .price{font-size: 24px;}
+    .flipbooks-cards .flipbooks-card .img-div .img{height: 220px;}
+    .flipbooks-cards .carousel-item{ backface-visibility: unset;background: #fff;}
+    .flipbooks-cards-row{gap: 15px 0;}
 }
 
 
