--- a/style.css
+++ b/style.css
@@ -299,13 +299,13 @@ body{font-family: "Poppins", sans-serif !important;}
 .about-indi-flip .text-content .text{margin: 0;font-size: 18px;line-height: 32px;font-weight: 500;color: #212529;}
 .about-indi-flip .text-content .subheading{color: #000;font-size: 26px;line-height: 36px;text-transform: capitalize;font-weight: 600;}
 @keyframes contact-smallround {0%,100% {transform: translateY(0)} 50% {transform: translateY(40px)}}
-.details-section{background: #f9f9f9;position: relative;overflow: hidden;}
+.details-section{background: rgba(0,0,0,0.01);position: relative;overflow: hidden;}
 .details-section::before{content: '';background: url(images/blue-dots.png) repeat;height: 170px;position: absolute;right: 3px;bottom: 12px;width: 360px;z-index: 1;animation: 7.5s infinite contact-smallround;}
 .details-section .card-content{display: grid;grid-template-columns: repeat(2,1fr);}
 .details-section .card-content .inner-card{display: flex;flex-direction: column;align-items: center;justify-content: flex-start;text-align: center;border-right: 1px solid #ddd;padding: 26px 22px;border-bottom: 1px solid #ddd;height: 100%;}
 .details-section .card-content .inner-card:nth-child(even){border-right: 0;}
 .details-section .card-content .inner-card:nth-last-child(1){border-bottom: 0;}
-.details-section .card-content .inner-card .heading{font-size: 18px;line-height: 28px;margin-bottom: 15px;font-weight: 500;color: #000;}
+.details-section .card-content .inner-card .heading{font-size: 18px;line-height: 28px;margin-bottom: 15px;font-weight: 600;color: var(--primary-color);}
 
 .individual-price-page{background: #fff;position: relative;}
 .individual-price-page .price-btn{width: fit-content !important;}
@@ -317,8 +317,9 @@ body{font-family: "Poppins", sans-serif !important;}
 .individual-price-page.price-section .month-tag{font-size: 13px;padding: 6px 14px;margin-bottom: 7px;}
 .pricing-heading{font-size: 34px;line-height: normal;font-weight: 600;color: var(--primary-color);border-bottom: 3px solid var(--primary-color);width: fit-content;margin: auto auto 25px auto;}
 
-.call-cta-strip{padding: 40px 0 0 0;}
-.call-cta-strip .cta-strip{background:var(--primary-color) linear-gradient(90deg, var(--primary-color   ) 0%,#0543bf 44%,rgba(255,255,255,0.01) 100%);padding:50px 25px 55px;border-radius:25px;position:relative;box-shadow:0 -20px 50px inset rgba(0, 159, 238, 0.49);overflow:hidden;}
+.call-cta-strip{padding: 40px 0 0 0;overflow: hidden;}
+.call-cta-strip .cta-strip{position: relative;;background:var(--primary-color) linear-gradient(90deg, var(--primary-color   ) 0%,#0543bf 44%,rgba(255,255,255,0.01) 100%);padding:50px 25px 55px;border-radius:25px;position:relative;box-shadow:0 -20px 50px inset rgba(0, 159, 238, 0.49);overflow:hidden;}
+.call-cta-strip .cta-strip::before{content: '';position: absolute;height: 270px;width: 270px;border: 35px solid #84dbff;border-radius: 50%;right: -50px;opacity: .3;bottom: -65px !important;}
 .call-cta-strip .cta-strip .text{text-align: left;}
 .call-cta-strip .cta-strip .text .head{margin:0 0 20px;color: #fff;font-size: 29px;line-height: normal;}
 .call-cta-strip .cta-strip .text .subheading{font-size: 19px;line-height: 32px;color: #fff;max-width: 85%;font-weight: 500;}
@@ -441,6 +442,8 @@ body{font-family: "Poppins", sans-serif !important;}
     .call-cta-strip .list-div .list{font-size: 14px;line-height: 22px;}
     .call-cta-strip .cta-strip{padding: 32px 20px 40px;}
     .pricing-heading{font-size: 26px;margin-bottom: 15px;}
+
+    .call-cta-strip .cta-strip::before{display: none;}
 }
 @media (max-width:575px) {
     .feature-sec .icon-div{width: 60px;height: 60px;}
