--- a/style.css
+++ b/style.css
@@ -193,6 +193,12 @@ body{font-family: "Poppins", sans-serif !important;}
 .filter-div .form-group .form-label{font-weight: 600;text-transform: uppercase;margin-bottom: 10px;}
 .filter-div .form-group .checkboxs{display: flex;flex-direction: column;gap: 7px 0;}
 
+.search-bar{display: flex;justify-content: end;margin-bottom: 15px;gap: 0 10px;}
+.search-bar .input-text{width: 250px;border: 1px solid #ddd;padding: 8px 14px;background: transparent;border-radius: 4px;}
+.search-bar .input-text:focus{border-color: var(--primary-color);}
+.search-bar .input-text:focus-visible{outline: 0;}
+.search-bar .primary-btn{padding: 8px 16px;}
+
 
 @media (max-width: 767px) {
     .popular-flipbooks-sec .carousel-inner .carousel-item > div {
@@ -252,6 +258,8 @@ body{font-family: "Poppins", sans-serif !important;}
     .flipbooks-cards .flipbooks-card .img-div .img{height: 220px;}
     .flipbooks-cards .carousel-item{ backface-visibility: unset;background: #fff;}
     .flipbooks-cards-row{gap: 15px 0;}
+
+    .search-bar .input-text{width: 100%;}
 }
 
 .footer{background: var(--dark-secondary-color);padding: 70px 0 0 0;overflow: hidden;border-top-left-radius: 60px;border-top-right-radius: 60px;position: relative;z-index: 2;}
