--- a/style.css
+++ b/style.css
@@ -194,10 +194,13 @@ body{font-family: "Poppins", sans-serif !important;}
 .filter-div .form-group .checkboxs{display: flex;flex-direction: column;gap: 7px 0;}
 
 .search-bar{display: flex;justify-content: end;margin-bottom: 15px;gap: 0 10px;}
-.search-bar .input-text{width: 250px;border: 1px solid #ddd;padding: 8px 14px;background: transparent;border-radius: 4px;}
+.search-bar .input-text{width: 100%;border: 1px solid #ddd;padding: 8px 14px;background: transparent;border-radius: 4px;}
+.search-bar .input-group{flex-wrap: nowrap;}
 .search-bar .input-text:focus{border-color: var(--primary-color);}
 .search-bar .input-text:focus-visible{outline: 0;}
 .search-bar .primary-btn{padding: 8px 16px;}
+.search-bar .search-categories{width: 140px;}
+.search-bar .form-select:focus{box-shadow: none;border-color: var(--primary-color);}
 
 
 @media (max-width: 767px) {
@@ -259,6 +262,8 @@ body{font-family: "Poppins", sans-serif !important;}
     .flipbooks-cards .carousel-item{ backface-visibility: unset;background: #fff;}
     .flipbooks-cards-row{gap: 15px 0;}
 
+    .search-bar{flex-wrap: wrap;gap: 5px 0;}
+    .search-bar .primary-btn{width: 100%;}
     .search-bar .input-text{width: 100%;}
 }
 
