--- a/style.css
+++ b/style.css
@@ -162,6 +162,10 @@ body{font-family: "Poppins", sans-serif !important;}
 .page-banner-section .inner-content .heading{font-size: 32px;line-height: 48px;font-weight: 600;color: #000;margin: 0;}
 .page-banner-section .inner-content .subheading{margin: 0;font-size: 16px;line-height: 32px;color: var(--dark-secondary-color);}
 
+.page-banner-section .video-div{width: 100%;height: 100%;position: relative;}
+.page-banner-section .video-div .video-tag{width: 100%;height: 100%;}
+.page-banner-section .text-col{min-height: 300px;justify-content: center;}
+
 .introduction-div{padding: 35px 0;border-bottom: 1px solid #eee;}
 .introduction-div .introduction-text{font-size: 18px;line-height: 28px;color: #000;text-align: center;margin: 0;font-weight: 500;}
 
