--- a/style.css
+++ b/style.css
@@ -245,6 +245,8 @@ body{font-family: "Poppins", sans-serif !important;}
 
 @media (max-width:576px) {
     .page-banner-section{padding: 50px 0;}
+    .page-banner-section .inner-content .row{gap: 30px 0;}
+    .page-banner-section .text-col{min-height: auto;}
     .page-banner-section .inner-content .heading{font-size: 24px;line-height: 42px;}
     .page-banner-section .inner-content{gap: 15px;}
     .page-banner-section .inner-content .subheading{font-size: 14px;line-height: 28px;}
